--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             };
 
             var dependencies = [
-                'customActivity'
+                'js/customActivity'
             ];
 
             require(config, dependencies);
