--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css">
-    <script type="text/javascript" src="js/postmonger.js"></script>
     <script type="text/javascript" src="js/require.js"></script>
     <script type="text/javascript">
         (function () {
@@ -16,6 +15,7 @@
             };
 
             var dependencies = [
+                'js/postmonger',
                 'js/customActivity'
             ];
 
