--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
             
 
         </div>
+        <div>
+        <a href="https://custom-activity-v1.herokuapp.com/journeybuilder/validate">Validate</a>
+        </div>
 
     </div>
 </body>
